--- a/pages/RandomQuotes.html
+++ b/pages/RandomQuotes.html
@@ -25,8 +25,8 @@
         </div>
     </div>
 
-    <div class="row">
-        <div id="content" class="container" style="height: 30em">
+    <div class="row" id="floater">
+        <div id="content" class="container">
 
             <div class="container" style="height: 80%; margin-top: 5%">
                 <div class="row col-md-12">
