--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -21,8 +21,8 @@
 </head>
 <body>
 
-<div class="container">
-    <nav id="navbar" class="navbar collapse navbar-collapse navbar-fixed-top" role="navigation">
+<div class="container-fluid">
+    <nav id="navbar" class="navbar-collapse navbar-fixed-top" role="navigation">
         <div class="container">
 
             <ul id="navmenu" class="nav navbar-nav navbar-left">
@@ -35,9 +35,7 @@
                 <li>
                     <a href="#portfolio">Portfolio</a>
                 </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
+
             </ul>
         </div>
     </nav>
@@ -45,12 +43,12 @@
 
 <div class="container-fluid">
 
-    <a name="home" class="section_nav">a</a>
+    <div class="row section_nav">
+        <a name="home"/>
+    </div>
 
     <div id="sec_home" class="row section">
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-6">
+        <div class="col-xs-12">
 
             <img class="class='img-responsive center-block" src="http://innouvous.comlu.com/img/innouvous.png"/>
 
@@ -75,39 +73,41 @@
                 </ul>
             </div>
         </div>
-
-        <div class="col-md-3">
-        </div>
-
     </div>
 
-    <a name="about" class="section_nav">b</a>
+    <div class="row section_nav">
+        <a name="about"/>
+    </div>
 
     <div id="sec_about" class="row section">
-        <div class="col-md-12">
+        <div class="col-xs-12">
             <h2 class="section_title">About</h2>
 
-            <h3 class="bold">This one man company (sole-proprietorship)!</h3>
+            <h4 class="bold">We are (I am) a one man company!</h4>
 
-            <p>I have been coding since around 1996 <b>when I was six</b>.
+            <p>I have been coding since around <b>1996 when I was six</b>.
                 I just really like figuring out how to make computers do things... then useful things...
             </p>
 
-            <h3 class="bold">And now I am actually paid for it! But...</h3>
+            <h4 class="bold">And now I am actually paid for it! But...</h4>
 
             <p>Lately, I have been sort of bored and also wondering what exactly is it that I want to do/have done in
-                <b>LIFE</b>...
+                <b>Life</b>
                 <br/>
-                Then I found <b>FreeCodeCamp</b> and I went that's it!
-                <br/>
-                <br/>
+                Then I found <b>FreeCodeCamp</b> and I went...
             </p>
 
-            <h3><i>Get some training, brush up on skills, learn some more, and do some non-profit work... I hope...</i>
-            </h3>
+            <h4 class="bold"><i>This is It!</i></h4>
 
-            <p>But first here's a bit more background: <i>... if anyone is interested...</i></p>
-            <table id="languages" class="table">
+            <p>Get some training, brush up on skills, learn some new ones, and do some <b>useful and meaningful
+                work... </b>
+            </p>
+            <br/>
+
+            <p class="bold">But first here's a bit more background: <i> (if anyone is interested in knowing...)</i></p>
+            <br/>
+
+            <table id="languages" class="table table-responsive table-bordered">
                 <thead>
                 <th>Childhood</th>
                 <th>Pre-College</th>
@@ -160,23 +160,16 @@
         </div>
     </div>
 
-    <a class="section_nav" name="portfolio">p</a>
+    <div class="row section_nav">
+        <a name="portfolio"/>
+    </div>
 
     <div id="sec_portfolio" class="row section">
-        <div class="col-md-12">
+        <div class="col-xs-12">
             <h2 class="section_title">Portfolio</h2>
 
             <div id="portfolio_grid" class="container" style="margin: 0">
             </div>
-        </div>
-    </div>
-
-
-    <a name="contact"></a>
-
-    <div class="row section">
-        <div class="col-md-5">
-            <H2>Contact</H2>
         </div>
     </div>
 </div>
