--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -21,30 +21,28 @@
 </head>
 <body>
 
-<div class="container-fluid">
-    <nav id="navbar" class="navbar-collapse navbar-fixed-top" role="navigation">
-        <div class="container">
+<nav id="navbar" class="navbar-collapse navbar-fixed-top" role="navigation">
+    <div class="container">
 
-            <ul id="navmenu" class="nav navbar-nav navbar-left">
-                <li>
-                    <a href="#home">Home</a>
-                </li>
-                <li>
-                    <a href="#about">About</a>
-                </li>
-                <li>
-                    <a href="#portfolio">Portfolio</a>
-                </li>
+        <ul id="navmenu" class="nav navbar-nav navbar-left">
+            <li>
+                <a href="#home">Home</a>
+            </li>
+            <li>
+                <a href="#about">About</a>
+            </li>
+            <li>
+                <a href="#portfolio">Portfolio</a>
+            </li>
 
-            </ul>
-        </div>
-    </nav>
-</div>
+        </ul>
+    </div>
+</nav>
 
 <div class="container-fluid">
 
     <div class="row section_nav">
-        <a name="home"/>
+        <a name="home"></a>
     </div>
 
     <div id="sec_home" class="row section">
@@ -76,7 +74,7 @@
     </div>
 
     <div class="row section_nav">
-        <a name="about"/>
+        <a name="about"></a>
     </div>
 
     <div id="sec_about" class="row section">
@@ -161,7 +159,7 @@
     </div>
 
     <div class="row section_nav">
-        <a name="portfolio"/>
+        <a name="portfolio"></a>
     </div>
 
     <div id="sec_portfolio" class="row section">
