--- a/pages/RandomQuotes.html
+++ b/pages/RandomQuotes.html
@@ -19,7 +19,7 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-xs-12">
             <h1 id="title">Random Quote Generator</h1>
             <br/>
         </div>
@@ -29,11 +29,11 @@
         <div id="content" class="container">
 
             <div class="container" style="height: 80%; margin-top: 5%">
-                <div class="row col-md-12">
+                <div class="row col-xs-12">
                     <h3 id="quote" class="text-center"></h3>
                     <br/>
                 </div>
-                <div class="row col-md-9">
+                <div class="row col-xs-9">
                     <h4 id="author" class="text-right"></h4>
                 </div>
 
@@ -42,11 +42,11 @@
 
             <div class="row">
 
-                <div class="col-md-4"></div>
-                <div class="col-md-2">
+                <div class="col-xs-4"></div>
+                <div class="col-xs-2">
                     <button id="generate" class="center-block btn btn-default">Roll Again!</button>
                 </div>
-                <div class="col-md-2" style="margin-top: 4px">
+                <div class="col-xs-2" style="margin-top: 4px">
                     <a href="https://twitter.com/share" class="twitter-share-button" data-size="large">Tweet</a>
                     <script>!function (d, s, id) {
                         var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
