--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -17,7 +17,10 @@
 
 
     <meta charset="UTF-8">
-    <title></title>
+    <meta name="viewport" content="width=device=width,initial-scale=1">
+
+
+    <title>innnouvous Portfolio</title>
 </head>
 <body>
 
@@ -34,12 +37,11 @@
             <li>
                 <a href="#portfolio">Portfolio</a>
             </li>
-
         </ul>
     </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container" style="padding: 2em">
 
     <div class="row section_nav">
         <a name="home"></a>
@@ -47,14 +49,18 @@
 
     <div id="sec_home" class="row section">
         <div class="col-xs-12">
+            <div class="row">
+                <img class="class='col-xs-12 img-responsive center-block"
+                     src="http://innouvous.comlu.com/img/innouvous.png"/>
+            </div>
 
-            <img class="class='img-responsive center-block" src="http://innouvous.comlu.com/img/innouvous.png"/>
+            <div class="row">
+                <h2 class="col-xs-12 text-center">from ideas to solutions</h2>
+            </div>
 
-            <h2 class="text-center">from ideas to solutions</h2>
+            <div class="row" style="padding-top: 4em">
 
-            <div class="text-center" style="padding-top: 4em">
-
-                <ul class="list-inline intro-social-buttons">
+                <ul class="col-xs-12 text-center list-inline intro-social-buttons">
                     <li>
                         <a href="https://github.com/allanx2000" target="_blank" class="btn btn-default btn-lg "><i
                                 class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
@@ -79,82 +85,92 @@
 
     <div id="sec_about" class="row section">
         <div class="col-xs-12">
-            <h2 class="section_title">About</h2>
+            <div class="row">
+                <div class="col-xs-12">
 
-            <h4 class="bold">We are (I am) a one man company!</h4>
+                    <h2 class="section_title">About</h2>
 
-            <p>I have been coding since around <b>1996 when I was six</b>.
-                I just really like figuring out how to make computers do things... then useful things...
-            </p>
+                    <h4 class="bold">We are (I am) a one man company!</h4>
 
-            <h4 class="bold">And now I am actually paid for it! But...</h4>
+                    <p>I have been coding since around <b>1996 when I was six</b>.
+                        I just really like figuring out how to make computers do things... then useful things...
+                    </p>
 
-            <p>Lately, I have been sort of bored and also wondering what exactly is it that I want to do/have done in
-                <b>Life</b>
-                <br/>
-                Then I found <b>FreeCodeCamp</b> and I went...
-            </p>
+                    <h4 class="bold">And now I am actually paid for it! But...</h4>
 
-            <h4 class="bold"><i>This is It!</i></h4>
+                    <p>Lately, I have been sort of bored and also wondering what exactly is it that I want to do/have
+                        done in
+                        <b>Life</b>
+                        <br/>
+                        Then I found <b>FreeCodeCamp</b> and I went...
+                    </p>
 
-            <p>Get some training, brush up on skills, learn some new ones, and do some <b>useful and meaningful
-                work... </b>
-            </p>
-            <br/>
+                    <h4 class="bold"><i>This is It!</i></h4>
 
-            <p class="bold">But first here's a bit more background: <i> (if anyone is interested in knowing...)</i></p>
-            <br/>
+                    <p>Get some training, brush up on skills, learn some new ones, and do some <b>useful and meaningful
+                        work... </b>
+                    </p>
+                    <br/>
 
-            <table id="languages" class="table table-responsive table-bordered">
-                <thead>
-                <th>Childhood</th>
-                <th>Pre-College</th>
-                <th>College</th>
-                <th>Post-College</th>
-                <th>And Now... <span class="web">(Web 3.5)</span></th>
-                </thead>
+                    <p class="bold">But first here's a bit more background: <i> (if anyone is interested in
+                        knowing...)</i></p>
+                    <br/>
+                </div>
+            </div>
 
-                <td>
-                    <ul>
-                        <li>QBASIC</li>
-                        <li>VB4</li>
-                        <li>VB6</li>
-                    </ul>
-                </td>
+            <div class='row'>
+                <div class="col-xs-12 col-md-10 col-md-offset-1">
+                    <table id="languages" class="table table-responsive table-bordered">
+                        <thead>
+                        <th>Childhood</th>
+                        <th>Pre-College</th>
+                        <th>College</th>
+                        <th>Post-College</th>
+                        <th>And Now... <span class="web">(Web 3.5)</span></th>
+                        </thead>
 
-                <td>
-                    <ul>
-                        <li>VB NET</li>
-                        <li>C#</li>
-                        <li>ASP NET <span class="web">(Web 1)</span></li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>Matlab</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>clojure</li>
-                        <li>VBA</li>
-                        <li>Java</li>
-                        <li>JavaScript</li>
-                        <li>PHP, MySQL <span class="web">(Web 2)</span></li>
-                        <li>Linux</li>
-                        <li>Android</li>
-                        <li>MongoDB</li>
-                        <li>Python</li>
-                        <li>node.js, Express <span class="web">(Web 3)</span></li>
-                        <li>Scala</li>
-                    </ul>
-                </td>
+                        <td>
+                            <ul>
+                                <li>QBASIC</li>
+                                <li>VB4</li>
+                                <li>VB6</li>
+                            </ul>
+                        </td>
 
-                <td>
-                    <ul></ul>
-                </td>
-            </table>
+                        <td>
+                            <ul>
+                                <li>VB NET</li>
+                                <li>C#</li>
+                                <li>ASP NET <span class="web">(Web 1)</span></li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Matlab</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>clojure</li>
+                                <li>VBA</li>
+                                <li>Java</li>
+                                <li>JavaScript</li>
+                                <li>PHP, MySQL <span class="web">(Web 2)</span></li>
+                                <li>Linux</li>
+                                <li>Android</li>
+                                <li>MongoDB</li>
+                                <li>Python</li>
+                                <li>node.js, Express <span class="web">(Web 3)</span></li>
+                                <li>Scala</li>
+                            </ul>
+                        </td>
 
+                        <td>
+                            <ul>Bootstrap</ul>
+                        </td>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -163,12 +179,15 @@
     </div>
 
     <div id="sec_portfolio" class="row section">
-        <div class="col-xs-12">
-            <h2 class="section_title">Portfolio</h2>
+        <div class="row">
+            <h2 class="col-xs-12 text-center section_title">Portfolio</h2>
+        </div>
 
-            <div id="portfolio_grid" class="container" style="margin: 0">
+        <div class="row">
+            <div id="portfolio_grid" class=" col-xs-offset-1 col-xs-10"> <!--style="margin: 0 auto"-->
             </div>
         </div>
+
     </div>
 </div>
 
