--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -120,55 +120,61 @@
 
             <div class='row'>
                 <div class="col-xs-12 col-md-10 col-md-offset-1">
-                    <table id="languages" class="table table-responsive table-bordered">
-                        <thead>
-                        <th>Childhood</th>
-                        <th>Pre-College</th>
-                        <th>College</th>
-                        <th>Post-College</th>
-                        <th>And Now... <span class="web">(Web 3.5)</span></th>
-                        </thead>
+                    <div style="margin: 0 auto; width: 98%;" class="table-responsive">
+                        <table id="languages" class="table table-bordered">
+                            <thead>
+                            <th>Childhood</th>
+                            <th>Pre-College</th>
+                            <th>College</th>
+                            <th>Post-College</th>
+                            <th>And Now... <span class="web">(Web 3.5)</span></th>
+                            </thead>
 
-                        <td>
-                            <ul>
-                                <li>QBASIC</li>
-                                <li>VB4</li>
-                                <li>VB6</li>
-                            </ul>
-                        </td>
+                            <td>
+                                <ul>
+                                    <li>QBASIC</li>
+                                    <li>VB4</li>
+                                    <li>VB6</li>
+                                </ul>
+                            </td>
 
-                        <td>
-                            <ul>
-                                <li>VB NET</li>
-                                <li>C#</li>
-                                <li>ASP NET <span class="web">(Web 1)</span></li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Matlab</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>clojure</li>
-                                <li>VBA</li>
-                                <li>Java</li>
-                                <li>JavaScript</li>
-                                <li>PHP, MySQL <span class="web">(Web 2)</span></li>
-                                <li>Linux</li>
-                                <li>Android</li>
-                                <li>MongoDB</li>
-                                <li>Python</li>
-                                <li>node.js, Express <span class="web">(Web 3)</span></li>
-                                <li>Scala</li>
-                            </ul>
-                        </td>
+                            <td>
+                                <ul>
+                                    <li>VB NET</li>
+                                    <li>C#</li>
+                                    <li>ASP NET <span class="web">(Web 1)</span></li>
+                                </ul>
+                            </td>
 
-                        <td>
-                            <ul>Bootstrap</ul>
-                        </td>
-                    </table>
+                            <td>
+                                <ul>
+                                    <li>Matlab</li>
+                                </ul>
+                            </td>
+
+                            <td>
+                                <ul>
+                                    <li>clojure</li>
+                                    <li>VBA</li>
+                                    <li>Java</li>
+                                    <li>JavaScript</li>
+                                    <li>PHP, MySQL <span class="web">(Web 2)</span></li>
+                                    <li>Linux</li>
+                                    <li>Android</li>
+                                    <li>MongoDB</li>
+                                    <li>Python</li>
+                                    <li>node.js, Express <span class="web">(Web 3)</span></li>
+                                    <li>Scala</li>
+                                </ul>
+                            </td>
+
+                            <td>
+                                <ul>
+                                    <li>Bootstrap</li>
+                                </ul>
+                            </td>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
@@ -184,7 +190,11 @@
         </div>
 
         <div class="row">
-            <div id="portfolio_grid" class=" col-xs-offset-1 col-xs-10"> <!--style="margin: 0 auto"-->
+            <div class="container">
+                <div class="row">
+                    <div id="portfolio_grid" class="col-xs-12"> <!--style="margin: 0 auto"-->
+                    </div>
+                </div>
             </div>
         </div>
 
