--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -24,9 +24,41 @@
 </head>
 <body>
 
-<nav id="navbar" class="navbar-collapse navbar-fixed-top" role="navigation">
-    <div class="container">
+<nav id="navbar" class="navbar navbar-fixed-top navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
 
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul id="navmenu" class="nav navbar-nav navbar-left">
+                <li>
+                    <a href="#home">Home</a>
+                </li>
+                <li>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="#portfolio">Portfolio</a>
+                </li>
+            </ul>
+
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
+
+<!--
+<nav id="navbar" class="navbar navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
         <ul id="navmenu" class="nav navbar-nav navbar-left">
             <li>
                 <a href="#home">Home</a>
@@ -40,6 +72,7 @@
         </ul>
     </div>
 </nav>
+-->
 
 <div class="container" style="padding: 2em">
 
