Add scroll effect

--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -56,24 +56,6 @@
     <!-- /.container-fluid -->
 </nav>
 
-<!--
-<nav id="navbar" class="navbar navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-        <ul id="navmenu" class="nav navbar-nav navbar-left">
-            <li>
-                <a href="#home">Home</a>
-            </li>
-            <li>
-                <a href="#about">About</a>
-            </li>
-            <li>
-                <a href="#portfolio">Portfolio</a>
-            </li>
-        </ul>
-    </div>
-</nav>
--->
-
 <div class="container" style="padding: 2em">
 
     <div class="row section_nav">
@@ -123,10 +105,14 @@
 
                     <h2 class="section_title">About</h2>
 
-                    <h4 class="bold">We are (I am) a one man company!</h4>
+                    <h4 class="bold">
+                        <del>We are</del>
+                        I am a one man company!
+                    </h4>
 
                     <p>I have been coding since around <b>1996 when I was six</b>.
-                        I just really like figuring out how to make computers do things... then useful things...
+                        I just really like figuring out how to make computers do things, then more and more useful
+                        things.
                     </p>
 
                     <h4 class="bold">And now I am actually paid for it! But...</h4>
@@ -135,18 +121,19 @@
                         done in
                         <b>Life</b>
                         <br/>
-                        Then I found <b>FreeCodeCamp</b> and I went...
+                        Then I found <b>FreeCodeCamp</b> and I went:
                     </p>
 
                     <h4 class="bold"><i>This is It!</i></h4>
 
-                    <p>Get some training, brush up on skills, learn some new ones, and do some <b>useful and meaningful
-                        work... </b>
+                    <p>Time to get some training to brush up on skills, learn some new ones, and do some <b>useful and
+                        meaningful
+                        work!</b>
                     </p>
                     <br/>
 
                     <p class="bold">But first here's a bit more background: <i> (if anyone is interested in
-                        knowing...)</i></p>
+                        knowing)</i></p>
                     <br/>
                 </div>
             </div>
@@ -223,7 +210,7 @@
         </div>
 
         <div class="row">
-            <div class="container">
+            <div class="container" style="width:95%;">
                 <div class="row">
                     <div id="portfolio_grid" class="col-xs-12"> <!--style="margin: 0 auto"-->
                     </div>
