--- a/pages/Calculator.html
+++ b/pages/Calculator.html
@@ -29,9 +29,9 @@
 
     <div class="row">
 
-        <div class="col-xs-3"></div>
+        <div class="col-xs-1 col-md-3"></div>
 
-        <div id="calculator" class="col-xs-6">
+        <div id="calculator" class="col-xs-10 col-md-6">
 
             <input type="text" id="screen" disabled="true"/>
 
