--- a/pages/Wiki.html
+++ b/pages/Wiki.html
@@ -43,5 +43,8 @@
                 <div id="results">
                 </div>
             </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
