IImprovements for all

--- a/pages/Simon.html
+++ b/pages/Simon.html
@@ -98,6 +98,10 @@
                 <div class="col-xs-4 options_section">
                     <h3 class="text-center">Cheats</h3>
 
+                    <p>Show Next Move</p>
+
+                    <p>No Time Limit</p>
+
                     <!--
                     <table class="options_table">
                         <tr>
