--- a/pages/XOs.html
+++ b/pages/XOs.html
@@ -34,6 +34,9 @@
         </div>
     </div>
 
+    <div class="row">
+        <h5 id="status" class="text-center">No Game</h5>
+    </div>
 
     <div class="row">
         <div class="col-xs-12">
