--- a/pages/Clock.html
+++ b/pages/Clock.html
@@ -14,12 +14,18 @@
 
 </head>
 <body>
-<div class="content container">
+<div class="content container-fluid">
     <div class="row">
         <div class="col-xs-12">
             <h1 id="title" class="text-center">Pomodoro's Timer</h1>
         </div>
     </div>
+
+    <div class="row">
+        <div id="alerts" class="col-xs-4 col-xs-offset-4">
+        </div>
+    </div>
+
 
     <div class="row">
         <div class="col-xs-12">
@@ -37,7 +43,7 @@
                                 </tr>
                             </table>
                             <div class="input-group">
-                                <input id="t_work" maxlength="3" class="form-control" type="number"/>
+                                <input id="t_work" max="999" min="1" value="15" class="form-control" type="number"/>
                                 <span class="input-group-addon">minutes</span>
                             </div>
                         </td>
@@ -53,7 +59,7 @@
                         </td>
                         <td>
                             <div class="input-group">
-                                <input id="t_break" maxlength="3" class="form-control" type="number"/>
+                                <input id="t_break" max="999" min="1" value="10" class="form-control" type="number"/>
                                 <span class="input-group-addon">minutes</span>
                             </div>
                         </td>
@@ -66,13 +72,13 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <h2 id="status" class="text-center"></h2>
+            <h3 id="status" class="text-center"></h3>
         </div>
     </div>
 
     <div class="row">
         <div class="col-xs-12">
-            <h1 id="time_left" class="text-center"></h1>
+            <h2 id="time_left" class="text-center"></h2>
         </div>
     </div>
 </div>
