make img links relative

--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -65,7 +65,7 @@
         <div class="col-xs-12">
             <div class="row">
                 <img class="class='col-xs-12 img-responsive center-block"
-                     src="http://innouvous.comlu.com/img/innouvous.png"/>
+                     src="/img/innouvous.png"/>
             </div>
 
             <div class="row">
