--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -191,6 +191,7 @@
                             <td>
                                 <ul>
                                     <li>Bootstrap</li>
+									<li>React</li>
                                 </ul>
                             </td>
                         </table>
