Update About Me

--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -102,38 +102,25 @@
             <div class="row">
                 <div class="col-xs-12">
 
-                    <h2 class="section_title">About</h2>
+                    <h2 class="section_title">About Me</h2>
 
-                    <h4 class="bold">
-                        <del>We are</del>
-                        I am a one man company!
-                    </h4>
-
-                    <p>I have been coding since around <b>1996 when I was six</b>.
-                        I just really like figuring out how to make computers do things, then more and more useful
-                        things.
-                    </p>
-					<!--
-                    <h4 class="bold">And now I am actually paid for it! But...</h4>
-					-->
-					
-                    <p>Lately, I have been sort of bored and also wondering what exactly is it that I want to do/have
-                        done in
-                        <b>Life</b>
+                    <p >
+                        I have had a passion for coding ever since I learned my first language when I was 6.  I just like problem solving (I also play a lot of puzzle games like Go and Sudoku) and being efficient
+                        which programming has empowered me to do. Making a computer do something in seconds that a person would need minutes, hours, or days to do gives me rush of satisfaction.
                         <br/>
-                        Then I found <b>FreeCodeCamp</b> and I went:
+                        <br/>
+                        I have built a lot of programs based on my own needs and wants in many different languages and across the stack (since I need to write all the layers).
+                        In addition, I like reading about and learning new technologies that I find useful. As much as I like being up to date, it's impossible to learn everything and it's pointless if you don't use it. As they say and also an expensive lesson I've learned: <i>If you don't use it, you lose it.</i>
+                        <br/>
+                        <br/>
+                        <b>
+                        innouvous is an umbrella company/name/brand used to share whatever I have created.
+                        </b>
+                        <br/>
                     </p>
 
-                    <h4 class="bold"><i>This is It!</i></h4>
-
-                    <p>Time to get some training to brush up on skills, learn some new ones, and do some <b>useful and
-                        meaningful
-                        work!</b>
-                    </p>
-                    <br/>
-
-                    <p class="bold">But first here's a bit more background: <i> (if anyone is interested in
-                        knowing)</i></p>
+                    <p>Below are some of the languages I've used but as I found, languages (most of them) are easy to learn.
+                        It's the design, testing, debugging, and code quality skills that make a great developer. And that takes a lot of time and the experience to learn.</p>
                     <br/>
                 </div>
             </div>
@@ -143,31 +130,24 @@
                     <div style="margin: 0 auto; width: 98%;" class="table-responsive">
                         <table id="languages" class="table table-bordered">
                             <thead>
-                            <th>Childhood</th>
-                            <th>Pre-College</th>
-                            <th>College</th>
-                            <th>Post-College</th>
-                            <th>And Now... <span class="web">(Web 3.5)</span></th>
+                            <th style="width: 33%">1996-2007</th>
+                            <th style="width: 33%">2007-2011 (College)</th>
+                            <th style="width: 33%">2011+</th>
                             </thead>
 
                             <td>
                                 <ul>
                                     <li>QBASIC</li>
                                     <li>VB4</li>
-                                    <li>VB6</li>
+                                    <li>VB6</li>        
+									<li>VB NET</li>
                                 </ul>
                             </td>
 
                             <td>
                                 <ul>
-                                    <li>VB NET</li>
                                     <li>C#</li>
-                                    <li>ASP NET <span class="web">(Web 1)</span></li>
-                                </ul>
-                            </td>
-
-                            <td>
-                                <ul>
+                                    <li>ASP NET 2 <span class="web">(Web 1)</span></li>
                                     <li>Matlab</li>
                                 </ul>
                             </td>
@@ -185,13 +165,8 @@
                                     <li>Python</li>
                                     <li>node.js, Express <span class="web">(Web 3)</span></li>
                                     <li>Scala</li>
-                                </ul>
-                            </td>
-
-                            <td>
-                                <ul>
-                                    <li>Bootstrap</li>
-									<li>React</li>
+								    <li>Bootstrap <span class="web">(Web 3.5)</span></li>
+									<li>React <span class="web">(Web 3.5)</span></li>
                                 </ul>
                             </td>
                         </table>
