--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -6,10 +6,19 @@
     <link rel='stylesheet' href='../css/bootstrap.min.css'/>
     <link rel='stylesheet' href='../css/font-awesome.css'/>
 
+    <!--
     <script src='../js/jquery.min.js'></script>
+    <script src='../js/jquery-ui.min.js'></script>
+    -->
+
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+
     <script src='../js/bootstrap.min.js'></script>
 
     <link href='https://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
     <script src='Portfolio.js'></script>
     <link rel='stylesheet' href='Portfolio.css'/>
@@ -198,4 +207,13 @@
 </div>
 
 </body>
+
+<div id="dialog-message" title="Title">
+
+    <img id="dialog-image"/>
+
+    <div id="dialog-description"></div>
+    <div id="dialog-link"></div>
+</div>
+
 </html>
