--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -10,12 +10,12 @@
     <script src='../js/jquery.min.js'></script>
     <script src='../js/jquery-ui.min.js'></script>
     -->
+    <script src='../js/bootstrap.min.js'></script>
 
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 
-    <script src='../js/bootstrap.min.js'></script>
 
     <link href='https://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -208,7 +208,7 @@
 
 </body>
 
-<div id="dialog-message" title="Title">
+<div id="dialog-message" class="ui-dialog-content ui-widget-content" title="Title">
 
     <img id="dialog-image"/>
 
