--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -210,7 +210,7 @@
 
 <div id="dialog-message" class="ui-dialog-content ui-widget-content" title="Title">
 
-    <img id="dialog-image"/>
+    <img id="dialog-image" class="img center-block"/>
 
     <div id="dialog-description"></div>
     <div id="dialog-link"></div>
