--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -64,7 +64,7 @@
     <!-- /.container-fluid -->
 </nav>
 
-<div class="container" style="padding: 2em">
+<div class="container" id="main_container" style="padding: 2em;>
 
     <div class="row section_nav">
         <a name="home"></a>
@@ -208,7 +208,7 @@
 
 </body>
 
-<div id="dialog-message" class="ui-dialog-content ui-widget-content" title="Title">
+<div id="dialog-message" title="Title">
 
     <img id="dialog-image" class="img center-block"/>
 
