--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -64,7 +64,7 @@
     <!-- /.container-fluid -->
 </nav>
 
-<div class="container" id="main_container" style="padding: 2em;>
+<div class="container" style="padding: 2em;">
 
     <div class="row section_nav">
         <a name="home"></a>
