--- a/pages/fcc/XOs.html
+++ b/pages/fcc/XOs.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>X and O's</title>
 
-    <link rel='stylesheet' href='../css/bootstrap.min.css'/>
-    <script src='../js/jquery.min.js'></script>
-    <script src='../js/bootstrap.min.js'></script>
+    <link rel='stylesheet' href='../../css/bootstrap.min.css'/>
+    <script src='../../js/jquery.min.js'></script>
+    <script src='../../js/bootstrap.min.js'></script>
 
     <script src='XOs.js'></script>
     <link rel='stylesheet' href='XOs.css'/>
