--- a/pages/fcc/Simon.html
+++ b/pages/fcc/Simon.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 
-    <link rel='stylesheet' href='../css/bootstrap.min.css'/>
-    <script src='../js/jquery.min.js'></script>
-    <script src='../js/bootstrap.min.js'></script>
+    <link rel='stylesheet' href='../../css/bootstrap.min.css'/>
+    <script src='../../js/jquery.min.js'></script>
+    <script src='../../js/bootstrap.min.js'></script>
 
     <script src='Simon.js'></script>
 
