--- a/pages/fcc/Tribute.html
+++ b/pages/fcc/Tribute.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>A Tribute...</title>
 
-    <link rel='stylesheet' href='../css/bootstrap.min.css'/>
-    <script src='../js/jquery.min.js'></script>
-    <script src='../js/bootstrap.min.js'></script>
+    <link rel='stylesheet' href='../../css/bootstrap.min.css'/>
+    <script src='../../js/jquery.min.js'></script>
+    <script src='../../js/bootstrap.min.js'></script>
 
     <link rel='stylesheet' href='Tribute.css'/>
 </head>
