--- a/pages/fcc/Twitch.html
+++ b/pages/fcc/Twitch.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>On Twitch</title>
 
-    <link rel='stylesheet' href='../css/bootstrap.min.css'/>
-    <script src='../js/jquery.min.js'></script>
-    <script src='../js/bootstrap.min.js'></script>
+    <link rel='stylesheet' href='../../css/bootstrap.min.css'/>
+    <script src='../../js/jquery.min.js'></script>
+    <script src='../../js/bootstrap.min.js'></script>
 
     <script src='Twitch.js'></script>
 
