--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -113,24 +113,29 @@
 
                     <h2 class="section_title">About Me</h2>
 
-                    <p >
+                    <h4 class="text-center">
+                        innouvous is an umbrella company/name/brand I use to share what I have created during my free time.
+                    </h4>
+
+                    <p>
                         I have had a passion for coding ever since I learned my first language when I was 6.  I just like problem solving (I also play a lot of puzzle games like Go and Sudoku) and being efficient
                         which programming has empowered me to do. Making a computer do something in seconds that a person would need minutes, hours, or days to do gives me rush of satisfaction.
                         <br/>
                         <br/>
-                        I have built a lot of programs based on my own needs and wants in many different languages and across the stack (since I need to write all the layers).
-                        In addition, I like reading about and learning new technologies that I find useful. As much as I like being up to date, it's impossible to learn everything and it's pointless if you don't use it. As they say and also an expensive lesson I've learned: <i>If you don't use it, you lose it.</i>
+                        I have built a lot of programs based on my own needs and wants, in many different languages, and across the stack (since I need to write all the layers).
+                        In addition, I like reading about and learning new technologies that I find useful.
                         <br/>
                         <br/>
-                        <b>
-                        innouvous is an umbrella company/name/brand used to share whatever I have created.
-                        </b>
+                        As much as I like being up to date, it's impossible to learn everything and it's pointless if you don't use it.
+                        As they say and also an expensive lesson I've learned: <i>If you don't use it, you lose it.</i>
                         <br/>
+                        <b>On the other hand, because of my experience and interests, I have consistently proven that I can quickly pick things up as needed.</b>
                     </p>
 
                     <p>Below are some of the languages I've used but as I found, languages (most of them) are easy to learn.
                         It's the design, testing, debugging, and code quality skills that make a great developer. And that takes a lot of time and the experience to learn.</p>
                     <br/>
+
                 </div>
             </div>
 
