--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -168,19 +168,15 @@
 
                             <td>
                                 <ul>
-                                    <li>clojure</li>
                                     <li>VBA</li>
                                     <li>Java</li>
                                     <li>JavaScript</li>
                                     <li>PHP, MySQL <span class="web">(Web 2)</span></li>
                                     <li>Linux</li>
                                     <li>Android</li>
-                                    <li>MongoDB</li>
                                     <li>Python</li>
-                                    <li>node.js, Express <span class="web">(Web 3)</span></li>
-                                    <li>Scala</li>
-								    <li>Bootstrap <span class="web">(Web 3.5)</span></li>
-									<li>React <span class="web">(Web 3.5)</span></li>
+                                    <li>MEAN/Bootstrap <span class="web">(Web 3)</span></li>
+                                    <li>Functional Programming</li>
                                 </ul>
                             </td>
                         </table>
