--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -114,7 +114,7 @@
                     <h2 class="section_title">About Me</h2>
 
                     <h4 class="text-center">
-                        innouvous is an umbrella company/name/brand I use to share what I build during my free time.
+                        innouvous is an umbrella company/name/brand I use to share what I create during my free time.
                     </h4>
 
                     <p>
