--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -128,8 +128,7 @@
                         <br/>
                         As much as I like being up to date, it's impossible to learn everything and it's pointless if you don't use it.
                         As they say and also an expensive lesson I've learned: <i>If you don't use it, you lose it.</i>
-                        <br/>
-                        <b>On the other hand, because of my experience and interests, I have consistently proven that I can quickly pick things up as needed.</b>
+                        <b>But, because of my broad experience and interests in learning new things, I have consistently proven that I can quickly pick things up as needed.</b>
                     </p>
 
                     <p>Below are some of the languages I've used but as I found, languages (most of them) are easy to learn.
