Changes for mobile screens

--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -210,7 +210,7 @@
 
 <div id="dialog-message" title="Title">
 
-    <img id="dialog-image" class="img center-block"/>
+    <img id="dialog-image" class="img img-responsive center-block"/>
 
     <br/>
 
