--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -28,7 +28,7 @@
     <meta name="viewport" content="width=device=width,initial-scale=1">
 
 
-    <title>innnouvous Portfolio</title>
+    <title>innnouvous Technologies</title>
 </head>
 <body>
 
